# kube-desktop

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: upload_artifacts.yml
src/: App.css  App.tsx  mocks.tsx  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  resources.rs
src/components/: MainArea.tsx  SideBar.tsx
src/components/resources/: ConfigMaps.tsx  CronJobs.tsx  Jobs.tsx  NameSpaces.tsx  Pods.tsx  Secrets.tsx  Services.tsx
